--- a/templates/dev.templ
+++ b/templates/dev.templ
@@ -1,6 +1,6 @@
-package dev
+package templates
 
-templ loginForm() {
+templ DevLoginForm() {
 	<form method="post" action="/login/dev">
 		<label class="text-sm" for="dev-kthid">Log In by username (dev)</label>
 		<div class="flex gap-2">
