--- a/templates/admin_invites.templ
+++ b/templates/admin_invites.templ
@@ -1,4 +1,4 @@
-package admin
+package templates
 
 import (
 	"fmt"
@@ -8,7 +8,28 @@ import (
 	"time"
 )
 
-templ invite(invite database.Invite) {
+templ Invites(invites []database.Invite) {
+	@AdminPage() {
+		<div class="p-8">
+			<ul class="grid grid-cols-6 p-2">
+				<li class="grid grid-cols-subgrid col-span-full border-b">
+					<p>Name</p>
+					<p>Uses</p>
+					<p>Max uses</p>
+					<p>Created at</p>
+					<p>Expires at</p>
+					<p></p>
+				</li>
+				for _, inv := range invites {
+					@Invite(inv)
+				}
+			</ul>
+			@inviteForm(nil)
+		</div>
+	}
+}
+
+templ Invite(invite database.Invite) {
 	<li class="grid grid-cols-subgrid col-span-full odd:bg-white/5 p-1">
 		<p>{ invite.Name }</p>
 		<p>{ strconv.Itoa(int(invite.CurrentUses)) }</p>
@@ -43,7 +64,7 @@ templ invite(invite database.Invite) {
 	</li>
 }
 
-templ editInvite(invite database.Invite) {
+templ EditInvite(invite database.Invite) {
 	<li class="grid col-span-full bg-white/10 p-1">
 		@inviteForm(&invite)
 	</li>
@@ -111,25 +132,4 @@ templ inviteForm(invite *database.Invite) {
 			<button class={ button } hx-get={ "/admin/invites/" + invite.ID.String() }>Cancel</button>
 		}
 	</form>
-}
-
-templ invites(invites []database.Invite) {
-	@page() {
-		<div class="p-8">
-			<ul class="grid grid-cols-6 p-2">
-				<li class="grid grid-cols-subgrid col-span-full border-b">
-					<p>Name</p>
-					<p>Uses</p>
-					<p>Max uses</p>
-					<p>Created at</p>
-					<p>Expires at</p>
-					<p></p>
-				</li>
-				for _, inv := range invites {
-					@invite(inv)
-				}
-			</ul>
-			@inviteForm(nil)
-		</div>
-	}
 }
