--- a/templates/admin.templ
+++ b/templates/admin.templ
@@ -1,30 +1,16 @@
 package templates
 
-import (
-	"fmt"
-	"github.com/datasektionen/logout/pkg/static"
-)
+import "fmt"
+
+templ adminNav() {
+	<a href="/admin/members">Members</a>
+	<a href="/admin/oidc-clients">OIDC Clients</a>
+	<a href="/admin/invites">Invites</a>
+}
 
 templ AdminPage() {
-	@page() {
-		<nav
-			class="
-				w-full h-12 bg-gray-700 flex uppercase
-				[&>a:not(:first-child)]:flex [&>a]:items-center [&>a:not(:first-child)]:px-3 hover:[&>a]:bg-gray-600 [&>a]:transition-colors
-			"
-		>
-			<a href="/admin" class="h-full block aspect-square grid place-items-center fill-cerise-regular bg-gray-600">
-				@templ.Raw(static.PublicAsString("delta.svg"))
-			</a>
-			<a href="/admin/members">Members</a>
-			<a href="/admin/oidc-clients">OIDC Clients</a>
-			<a href="/admin/invites">Invites</a>
-		</nav>
-		<div class="flex justify-center min-h-[calc(100vh-3rem)]">
-			<main class="bg-gray-800 w-[1000px] md:max-w-[calc(100vw-8rem)]">
-				{ children... }
-			</main>
-		</div>
+	@page(nav(true)) {
+		{ children... }
 	}
 }
 
@@ -85,23 +71,3 @@ templ UploadProgress(progress float64) {
 templ UploadMessage(message string, isErr bool) {
 	<p class={ "p-2 rounded " + bigIfTrue(isErr, "bg-red-600/50", "bg-green-600/50") }>{ message }</p>
 }
-
-var input = `
-	border border-neutral-500 grow
-	outline-none focus:border-cerise-strong hover:border-cerise-light
-	bg-slate-800 p-1.5 rounded h-8
-`
-
-var button = `
-	bg-[#3f4c66] p-1 h-8 block rounded border text-center
-	select-none border-transparent outline-none
-	focus:border-cerise-strong hover:border-cerise-light
-`
-
-var roundButton = `
-	bg-[#3f4c66] shrink-0 h-5 w-5 rounded-full
-	grid place-items-center pointer
-	border border-transparent outline-none focus:border-cerise-strong hover:border-cerise-light relative
-	[&>img]:w-3/5 [&>img]:h-3/5 [&>img]:invert
-	[&>p]:text-center [&>p]:leading-none
-`
