--- a/pkg/static/public/style.dist.css
+++ b/pkg/static/public/style.dist.css
@@ -658,6 +658,10 @@ html {
   width: 100%;
 }
 
+.w-20 {
+  width: 5rem;
+}
+
 .max-w-\[calc\(100vw-2rem\)\] {
   max-width: calc(100vw - 2rem);
 }
@@ -700,8 +704,16 @@ html {
   place-items: center;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
+}
+
+.items-stretch {
+  align-items: stretch;
 }
 
 .justify-center {
@@ -868,6 +880,11 @@ html {
 .text-neutral-100 {
   --tw-text-opacity: 1;
   color: rgb(245 245 245 / var(--tw-text-opacity));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .outline-none {
