--- a/templates/user.templ
+++ b/templates/user.templ
@@ -40,7 +40,7 @@ templ Account(user models.User, passkeys []models.Passkey, isAdmin bool) {
 					<p class="text-xl text-cerise-light">Email address</p>
 					<p>{ user.Email }</p>
 				</div>
-				@AccountYearForm(user.YearTag)
+				@AccountYearForm(user.YearTag, "")
 				<div>
 					if user.MemberTo == (time.Time{}) {
 						<p>Not a chapter member</p>
@@ -56,12 +56,24 @@ templ Account(user models.User, passkeys []models.Passkey, isAdmin bool) {
 	}
 }
 
-templ AccountYearForm(yearTag string) {
-	<form hx-patch="/account" hx-swap="outerHTML">
+templ AccountYearForm(yearTag, errorMessage string) {
+	<form hx-patch="/account" hx-swap="outerHTML" class="flex flex-col items-start">
 		<label for="year-tag" class="text-xl text-cerise-light">Year</label>
-		<br/>
-		<input class={ input + " w-16" } name="year-tag" id="year-tag" value={ yearTag } _="on input show next <button/>"/>
-		<button style="display: none" class={ button }>Save</button>
+		<div class="flex items-stretch gap-2">
+			<input
+				class={ input + " w-16" }
+				name="year-tag"
+				id="year-tag"
+				value={ yearTag }
+				_="on input show next <button/>"
+				required
+				autocomplete="off"
+			/>
+			<button style="display: none" class={ button }>Save</button>
+		</div>
+		if errorMessage != "" {
+			<p class="text-red-500">{ errorMessage }</p>
+		}
 	</form>
 }
 
