fix bug that elements inserted by hyperscript were not processed by htmx

--- a/templates/admin_oidc_clients.templ
+++ b/templates/admin_oidc_clients.templ
@@ -37,7 +37,7 @@ templ OidcClient(client database.OidcClient, secret []byte) {
 		</ul>
 		<button
 			class={ button }
-			_="on click put (next <template/>).innerHTML at end of previous <ul/>"
+			_="on click put (next <template/>).innerHTML at end of previous <ul/> then call htmx.process(previous <li/>)"
 		>Add redirect URI</button>
 		<template>
 			<li>
