--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -1,8 +1,8 @@
 package templates
 
 import (
-	"github.com/datasektionen/logout/pkg/static"
 	"github.com/datasektionen/logout/pkg/config"
+	"github.com/datasektionen/logout/pkg/static"
 )
 
 templ base() {
@@ -77,7 +77,8 @@ var input = `
 var button = `
 	bg-[#3f4c66] p-1 h-8 block rounded border text-center
 	select-none border-transparent outline-none
-	focus:border-cerise-strong hover:border-cerise-light
+	enabled:focus:border-cerise-strong enabled:hover:border-cerise-light
+	disabled:text-gray-500
 `
 
 var roundButton = `
