--- a/pkg/static/public/style.dist.css
+++ b/pkg/static/public/style.dist.css
@@ -692,6 +692,22 @@ html {
   grid-template-columns: subgrid;
 }
 
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.grid-cols-\[repeat\(4\2c auto\)\] {
+  grid-template-columns: repeat(4,auto);
+}
+
+.grid-rows-subgrid {
+  grid-template-rows: subgrid;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -734,6 +750,24 @@ html {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-x-1 {
+  -moz-column-gap: 0.25rem;
+       column-gap: 0.25rem;
+}
+
+.gap-y-2 {
+  row-gap: 0.5rem;
+}
+
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+
+.gap-y-1 {
+  row-gap: 0.25rem;
 }
 
 .overflow-auto {
@@ -847,6 +881,11 @@ html {
   padding-right: 0.375rem;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
@@ -861,10 +900,6 @@ html {
 
 .text-center {
   text-align: center;
-}
-
-.align-middle {
-  vertical-align: middle;
 }
 
 .text-lg {
@@ -1049,10 +1084,41 @@ html {
   border-color: rgb(238 42 123 / var(--tw-border-opacity));
 }
 
+.enabled\:hover\:border-cerise-light:hover:enabled {
+  --tw-border-opacity: 1;
+  border-color: rgb(236 95 153 / var(--tw-border-opacity));
+}
+
+.enabled\:focus\:border-cerise-strong:focus:enabled {
+  --tw-border-opacity: 1;
+  border-color: rgb(238 42 123 / var(--tw-border-opacity));
+}
+
+.disabled\:text-gray-500:disabled {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
 @media (min-width: 768px) {
   .md\:max-w-\[calc\(100vw-8rem\)\] {
     max-width: calc(100vw - 8rem);
   }
+}
+
+.\[\&\>\*\]\:h-4>* {
+  height: 1rem;
+}
+
+.\[\&\>\*\]\:h-6>* {
+  height: 1.5rem;
+}
+
+.\[\&\>\*\]\:h-8>* {
+  height: 2rem;
+}
+
+.\[\&\>\*\]\:h-7>* {
+  height: 1.75rem;
 }
 
 .\[\&\>\.error\]\:mt-2>.error {
