--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -89,6 +89,12 @@ var roundButton = `
 	[&>p]:text-center [&>p]:leading-none
 `
 
+var selectStyle = `
+	border border-neutral-500
+	outline-none focus:border-cerise-strong hover:border-cerise-light
+	bg-slate-800 p-1.5 rounded h-8
+`
+
 templ base64Helpers() {
 	<script>
 /**
