--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -1,8 +1,8 @@
 package templates
 
 import (
-	"github.com/datasektionen/logout/pkg/config"
-	"github.com/datasektionen/logout/pkg/static"
+	"github.com/datasektionen/sso/pkg/config"
+	"github.com/datasektionen/sso/pkg/static"
 )
 
 templ base() {
@@ -11,7 +11,7 @@ templ base() {
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
-			<title>Logout</title>
+			<title>Datasektionen SSO</title>
 			<link rel="stylesheet" href="/public/style.dist.css"/>
 			<script src="https://unpkg.com/htmx.org@2.0.3" integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq" crossorigin="anonymous"></script>
 			<script src="https://unpkg.com/htmx-ext-sse@2.2.2/sse.js" integrity="sha384-fw+eTlCc7suMV/1w/7fr2/PmwElUIt5i82bi+qTiLXvjRXZ2/FkiTNA/w0MhXnGI" crossorigin="anonymous"></script>
