--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -16,12 +16,14 @@ templ base() {
 			<script src="https://unpkg.com/htmx.org@2.0.3" integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq" crossorigin="anonymous"></script>
 			<script src="https://unpkg.com/htmx-ext-sse@2.2.2/sse.js" integrity="sha384-fw+eTlCc7suMV/1w/7fr2/PmwElUIt5i82bi+qTiLXvjRXZ2/FkiTNA/w0MhXnGI" crossorigin="anonymous"></script>
 			<script src="https://unpkg.com/hyperscript.org@0.9.13" integrity="sha384-5yQ5JTatiFEgeiEB4mfkRI3oTGtaNpbJGdcciZ4IEYFpLGt8yDsGAd7tKiMwnX9b" crossorigin="anonymous"></script>
+			<script src="https://unpkg.com/idiomorph@0.3.0/dist/idiomorph-ext.min.js" integrity="sha384-01awMgY2Qxoo57dFZwehcB4wqi9TunC6fiF9hpPaDsLu+ayOG+WvoatvgPWquZh8" crossorigin="anonymous"></script>
+			<!--script src="https://unpkg.com/morphdom@2.7.4/dist/morphdom-esm.js" integrity="sha384-32uSq+5CkJEgC7ZSxezdvE0+W6PeidDHEZi4Nh/Wm7EkCDcULeQVKes4llhG/Yyl" crossorigin="anonymous" type="module"></script-->
 			@base64Helpers()
 			if config.Config.Dev {
 				@devAutoReload()
 			}
 		</head>
-		<body class="bg-gray-900 text-neutral-100" hx-ext="clone">
+		<body class="bg-gray-900 text-neutral-100" hx-ext="morph">
 			{ children... }
 		</body>
 	</html>
